--- a/GpsTracker.Site/css/style.css
+++ b/GpsTracker.Site/css/style.css
@@ -1,112 +1,115 @@
   #user_panel {
-      position: fixed;
-      height: 100px;
-      width: 150px;
-      background-color: #222222;
-      z-index: 110;
-      right: 0;
-      top: 50px;
-    }
+    position: fixed;
+    height: 100px;
+    width: 150px;
+    background-color: #222222;
+    z-index: 110;
+    right: 0;
+    top: 50px;
+  }
 
-    .btn-black {
-      background-color: #222222;
-      color: white;
-      border-radius: 10px;
-      border: none;
-    }
+  .btn-black {
+    background-color: #222222;
+    color: white;
+    border-radius: 10px;
+    border: none;
+    padding: 5px;
+    margin-top: 8px;
+  }
 
-    .btn-black:hover {
-      background-color: green;
-      color: white;
-    }
+  .btn-black:hover {
+    background-color: green;
+    color: white;
+  }
 
-    .btn:active {
-      color: white;
-    }
+#current_user {
+  width: 35px;
+  height: 35px;
+  margin-top: -10px;
+  margin-left: 5px;
+}
 
-    #settings_panel {
-      z-index: 101;
-      position: absolute;
-      top: 7%;
-      width: 100%;
-      height: 50%;
-      opacity: 0.98;
-    }
+  #settings_panel {
+    z-index: 101;
+    position: absolute;
+    top: 7%;
+    width: 100%;
+    height: 50%;
+    opacity: 0.98;
+  }
 
-    .black {
-      color: black;
-    }
+  .black {
+    color: black;
+  }
 
   #map_container {
-      position: absolute;
-      top: 7%;
-      width: 100%;
-      height: 89%;
-    }
+    position: absolute;
+    top: 7%;
+    width: 100%;
+    height: 89%;
+  }
 
+  #login_panel {
+    position: fixed;
+    height: 145px;
+    width: 240px;
+    background-color: #222222;
+    z-index: 100;
+    right: 0;
+  }
 
-    #login_panel {
-      position: fixed;
-      height: 145px;
-      width: 240px;
-      background-color: #222222;
-      z-index: 100;
-      right: 0;
-    }
+  .panel {
+    z-index: 100;
+    position: absolute;
+    top: 50px;
+    background-color: #222222;
+    color: white;
+    right: 0;
+    width: 300px;
+  }
 
+  #about_panel {
+    z-index: 100;
+    position: absolute;
+    min-width: 770px;
+    top: 8%;
+    width: 55%;
+    height: 38%;
+    left: 23%;
+    opacity: 0.9;
+    min-height: 270px;
+  }
 
-    .panel {
-      z-index: 100;
-      position: absolute;
-      top: 50px;
-      background-color: #222222;
-      color: white;
-      right: 0;
-      width: 300px;
-    }
+  .circle {
+    height: 35px;
+    width: 35px;
+    border-radius: 17px;
+  }
 
-    #about_panel {
-      z-index: 100;
-      position: absolute;
-      top: 8%;
-      width: 55%;
-      height: 55%;
-      left: 23%;
-      opacity: 0.9;
-    }
+  .login_form {
+    position: relative;
+    width: 90%;
+    margin: auto auto;
+    height: 90%;
+    color: white;
+  }
 
+  .input_login {
+    border-radius: 8px;
+    border: none;
+    width: 100%;
+  }
 
-    .circle {
-      height: 35px;
-      width: 35px;
-      border-radius: 17px;
-    }
-
-    .login_form {
-      position: relative;
-      width: 90%;
-      margin: auto auto;
-      height: 90%;
-      color: white;
-    }
-
-    .input_login {
-      border-radius: 8px;
-      border: none;
-      width: 100%;
-    }
   #user_info {
-      position: fixed;
-      height: 270px;
-      width: 250px;
-      background-color: white;
-      opacity: 0.9;
-      z-index: 100;
-      bottom: 31px;
-    }
+    position: fixed;
+    height: 270px;
+    width: 250px;
+    background-color: white;
+    opacity: 0.9;
+    z-index: 100;
+    bottom: 31px;
+  }
 
-    .black {
-      color: black;
-    }
-
-  
+  .black {
+    color: black;
+  }
