--- a/GpsTracker.Site/css/style.css
+++ b/GpsTracker.Site/css/style.css
@@ -44,7 +44,7 @@
 
   #map_container {
     position: absolute;
-    top: 7%;
+    top: 52px;
     width: 100%;
     height: 89%;
   }
@@ -71,11 +71,11 @@
   #about_panel {
     z-index: 100;
     position: absolute;
-    min-width: 770px;
-    top: 8%;
-    width: 55%;
+    min-width: 450px;
+    top: 52px;
+    width: 35%;
     height: 38%;
-    left: 23%;
+    left: 33%;
     opacity: 0.9;
     min-height: 270px;
   }
