--- a/GpsTracker.App/app/src/main/res/layout/test.xml
+++ b/GpsTracker.App/app/src/main/res/layout/test.xml
@@ -3,10 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/buttonSettings"
+    <EditText
+        android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="dumbFuck"
-        android:text="@string/buttonSettings_label" />
+        android:ems="10"
+        android:inputType="date" />
 </LinearLayout>
