--- a/GpsTracker.Site/css/header/header.css
+++ b/GpsTracker.Site/css/header/header.css
@@ -8,7 +8,7 @@ body
 {
 	font-family: 'Verdana', sans-serif;
 	min-width: 320px;
-	font-size: 16px;
+	font-size: 15px;
 	height: 100%;
 }
 
@@ -49,11 +49,6 @@ nav .container
 	margin: 0px;
 }
 
-.menu li a
-{
-	padding: 10px;
-}
-
 
 .btn
 {
@@ -84,12 +79,6 @@ nav .container
 	margin-top: 50px;
 }
 
-.map_layout
-{
-	width: 100%;
-	height: 500px;
-}
-
 .authorized
 {
 	display: none !important;
@@ -113,7 +102,7 @@ nav .container
 
 #avatar
 {
-	width: 35px;
+	width: 30px;
 	height: 35px;
 	background-color: #fff;
 }
@@ -139,4 +128,9 @@ nav .container
 {
 	font-size: 14px;
 	color: white;
+}
+
+a.btn
+{
+	padding: 6px 12px;
 }
