--- a/GpsTracker.Site/css/header/header.css
+++ b/GpsTracker.Site/css/header/header.css
@@ -3,7 +3,15 @@
 	padding: 0;
 	margin: 0;
 }
-
+#toggle-edit
+{
+	background-color: #333333;
+	border: none;
+	position: absolute;
+	top:200px;
+	left: 5px;
+	z-index: 100;
+}
 body
 {
 	font-family: 'Verdana', sans-serif;
@@ -21,12 +29,13 @@ nav
 nav .container
 {
 	height: 47px;
-	line-height: 47px;	
+	line-height: 47px;
 }
 
 .navbar-brand
 {
-	height: 47px;	
+	height: 47px;
+	left: 0;
 }
 .navbar-brand a
 {
