--- a/GpsTracker.Site/css/header/media.css
+++ b/GpsTracker.Site/css/header/media.css
@@ -1,17 +1,22 @@
 /*Large devices, desktop*/
 
 @media only screen and (max-width: 1200px){
-	
 }
 
 /*Medium devices, desktop*/
 @media only screen and (max-width: 992px){
 
-.menu li a
+.menu li
 {
-	padding: 5px;
+	display: block;
 }
-
+#login
+{
+	width: 150px;
+}
+#pass {
+	width: 150px;
+}
 #search_dropdown
 {
 	width:20%;
@@ -51,7 +56,7 @@
 	display: inline-block;
 }
 
-.menu li button
+.menu li
 {
 	display: block;
 	width:100%;
@@ -71,7 +76,13 @@ nav
 	visibility: visible;
 	width:96%;
 }
-
+#login
+{
+	width: 100%;
+}
+#pass {
+	width: 100%;
+}
 #top_menu
 {
 	-webkit-padding:0px;
@@ -220,8 +231,34 @@ nav
 {
 	padding: 0px;
 }
+#edit-content
+{
+	top: 47px;
+}
+#save_button
+{
+	margin-top: 47px;
+}
+#profile-navigator
+{
+	left: -155px;
+	top: 47px;
+}
 
-
+#logn
+{
+	width: 180px;
+}
+#password
+{
+	width: 180px;
+}
+#edit-content
+{
+	display: inline-block;
+	top: 47px;
+	float: right;
+}
 .menu li
 {
 	display: block;
