--- a/GpsTracker.Site/css/profile/profile.css
+++ b/GpsTracker.Site/css/profile/profile.css
@@ -2,14 +2,88 @@
 {
 	padding:0px;
 }
+
+.form-control
+{
+	display: inline-block;
+	width: 90%;
+}
+
+.lable_control
+{
+
+}
+
 body
 {
 	height: 100%;
 }
 
+.form-group
+{
+	width: 100%;
+	padding-top: 15px;
+	display: block;
+	position: relative;
+}
+
+
+
 .profile_content
 {
+	padding-top: 20px;
+	display: inline-block;
+	width: 80%;
+	position: relative;
 
+}
+
+.profile_menu_nav
+{
+	position: relative;
+	background-color: #333;
+	height: 100%;
+	width: 200px;
+}
+
+.profile_menu_nav button
+{
+	display: block;
+	position: relative;
+	width: 100%;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+
+
+#save_button
+{
+	background-color: #333;
+	margin-bottom: 15px;
+	margin-left: 15px;
+	margin-right: 15px;
+}
+
+#save_button:hover,
+#save_button:focus
+{
+	background-color: #009900;
+	color: #ffffff;
+}
+
+#save_button2
+{
+	background-color: #333;
+	margin-bottom: 15px;
+	margin-left: 15px;
+	margin-right: 15px;
+}
+
+#save_button2:hover,
+#save_button2:focus
+{
+	background-color: #009900;
+	color: #ffffff;
 }
 
 section
@@ -33,19 +107,6 @@ section *
 	margin-right: 15px;
 }
 
-.profile_menu_nav
-{
-	background-color: #333;
-	height: 100%;
-}
-
-.profile_menu_nav button
-{
-	display: block;
-	width: 100%;
-	margin-top: 15px;
-	margin-bottom: 15px;
-}
 
 .hidden
 {
@@ -74,20 +135,6 @@ input[type='file'] {
 	height: 80px;
 }
 
-#save_button
-{
-	background-color: #333;
-	margin-bottom: 15px;
-	margin-left: 15px;
-	margin-right: 15px;
-}
-
-#save_button:hover,
-#save_button:focus
-{
-	background-color: #009900;
-	color: #ffffff;
-}
 
 section
 {
