--- a/GpsTracker.Site/css/profile/profile.css
+++ b/GpsTracker.Site/css/profile/profile.css
@@ -9,11 +9,6 @@
 	width: 90%;
 }
 
-.lable_control
-{
-
-}
-
 body
 {
 	height: 100%;
@@ -27,7 +22,22 @@ body
 	position: relative;
 }
 
+#friendlist_form .form-group
+{
+	padding: 15px;
+	margin: 0px;
+	width: 25%;
+}
 
+#friendlist, #requests, #search_results
+{
+	width: 100%;
+}
+
+.block, select option
+{
+	display: block;
+}
 
 .profile_content
 {
@@ -56,7 +66,8 @@ body
 }
 
 
-#save_button_user
+#save_button_user,
+#save_button_profile,
 {
 	background-color: #333;
 	margin-bottom: 15px;
@@ -65,25 +76,38 @@ body
 }
 
 #save_button_user:hover,
-#save_button_user:focus
-{
-	background-color: #009900;
-	color: #ffffff;
-}
-
-#save_button_profile
-{
-	background-color: #333;
-	margin-bottom: 15px;
-	margin-left: 15px;
-	margin-right: 15px;
-}
-
+#save_button_user:focus,
 #save_button_profile:hover,
-#save_button_profile:focus
+#save_button_profile:focus,
+#friendlist_add_button:hover,
+#friendlist_add_button:focus,
+#friendlist_delete_button:hover,
+#friendlist_delete_button:focus,
+#friendlist_accept_button:hover,
+#friendlist_accept_button:focus
 {
 	background-color: #009900;
 	color: #ffffff;
+}
+
+
+#friendlist_delete_button
+{
+	width: 100%;
+	background-color: #e60000;	
+}
+
+#friendlist_accept_button
+{
+	width: 100%;
+	background-color: #3399ff;
+}
+
+
+#friendlist_add_button
+{
+	width: 100%;
+	background-color: #333;
 }
 
 section
