--- a/GpsTracker.Site/css/main/main.css
+++ b/GpsTracker.Site/css/main/main.css
@@ -12,6 +12,11 @@ body
 	height: 100%;
 }
 
+.main-content
+{
+	position: relative;
+}
+
 .dropdown_control
 {
 	color: white;
@@ -34,6 +39,28 @@ body
 	color:white;
 	padding:15px;
 	padding-top:25px;
+}
+
+#user_info_avatar
+{
+	width: 75px;
+	height: 80px;
+}
+
+#user_info
+{
+	z-index: 999;
+	font-size: 11px;
+	color:white;
+	background-color: #333;
+	opacity: 0.8;
+	width: 10%;
+}
+
+#user_info *
+{
+	display: block;
+	margin: 10px;
 }
 
 #dropdown_menu *
